2002-06-23  Petr Stehlik  <pstehlik@sophics.cz>
* OK, the "-palette" patch from Andrew was completely wrong. I fixed it
  the right way and when I was at it I also moved the "-palette" command
  line option from main atari.c to colours.c.
* I also decided to fix the command line options in general, so I made some
  changes to atari.c and atari_x11.c.
* At last I corrected a bunch of things in atari_sdl.c so that now SDL port
  recognizes "-help". The other options now use single "-" to conform to
  the rest of Atari800 application.

2002-06-20  Petr Stehlik  <pstehlik@sophics.cz>
* atari.c: "unistd" header included - it should fix a start problem on FreeBSD
           4.5 according to an anonymous patch on sf.net.
* colours.c: loaded color palettes were ignored. Andrew Church posted a patch
             on sf.net that fixes it.
* atari800.man: manual page updated by Rob McMullen

2002-04-11  Piotr Fusik  <fox@scene.pl>
* pokey.c: allow high-speed disk i/o (Alpha-Load works)

2002-04-07  Christian Groessler <cpg@aladdin.de> and Petr Stehlik
* non-ANSI "t" parameter in fopen ("rt" and "wt" used for CR/LF files
  in DOS-like operating systems) removed since it was causing problems
  with KallistiOS Dreamcast library. Linux glibc could also be affected
  as it aborts scanning the mode parameter when it encounters an unknown
  char (consider "wt+"). Code was updated to take care of the possible
  extra \r before \n at end of fgets string. fputs() should be OK as
  the text mode is most probably the default mode.

2002-03-29  Vasyl Tsvirkunov <vasyl@pacbell.net>
* Dirty update scheme is completed

2002-03-18  Piotr Fusik  <fox@scene.pl>
* antic.c: NMIST bit 5 is external NMI (not reset) status in Antic,
  unused in Atari
* input.c: second button in 5200 joystick generates "Break key" IRQ
* monitor.c: "DLIST" now accepts address as an argument

2002-02-13  Petr Stehlik  <pstehlik@sophics.cz>
* atari_sdl.c: fixed screen offset in 32bpp (thanks to Suzanne Archibald)